[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlptx"
version = "0.0.1"
authors = [{ name="Stefan Horst", email="stefan-horst@gmx.de" }]
description = "Optimizing Power-to-X Systems with Reinforcement Learning"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
